# RegLex-AI

./: .env.example  .gitignore  Cloud.md  DEPLOYMENT.md  README.md  vercel.json
.claude/: settings.local.json
Backend/: .env  LICENSE  README.md  app.py  debug_results.json  debug_summary.json  pyproject.toml  requirements.txt  start_server.py  vercel.json
Backend/api/: index.py
Backend/src/: .env
Backend/src/anomaly_detector/: ano_detector_agent.py
Backend/src/compliance_checker/: keywords_corpus.json  regulation_retriever.py
Backend/src/embedder/: embeddings.py
Backend/src/llm_provider/verifier_llms/: claude_verifier.py  gemini_verifier.py  mistral_verifier.py  openai_verifier.py
Backend/src/pipeline/: debug_results.json  debug_summary.json  run_pipeline.py
Backend/src/sebi_hackathon_modules.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Backend/src/storage/: gcs_client.py
Frontend/: .env.example  .eslintrc.json  API-Documentation.md  CLAUDE.md  PDF_EXPORT_FEATURES.md  QWEN.md  README.md  middleware.ts  next.config.js  package-lock.json  package.json  plan.md  postman-guide.md  tsconfig.tsbuildinfo  vercel.json  workflow.md
Frontend/.claude/: settings.local.json
Frontend/app/: page.tsx
Frontend/hooks/: use-compliance.ts  use-realtime-dashboard.ts
Frontend/lib/: analytics.ts  api.ts  config.ts  error-handler.ts  export-utils.ts  fastapi-client.ts  fastapi-services.ts  mock-data.ts  mock-services.ts  monitoring.ts  performance.ts  realtime-analysis.ts  security.ts  seo.ts  utils.ts
Frontend/services/: compliance.ts
(+16 files in other folders)
