[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sebi-compliance-backend"
version = "1.0.0"
description = "SEBI Compliance Backend API"
authors = [
    {name = "RegLex AI Team"}
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "python-dotenv",
    "google-generativeai",
    "openai",
    "anthropic",
    "pymupdf",
    "requests",
    "numpy",
    "pandas",
    "google-cloud-storage==2.14.0",
    "faiss-cpu",
    "transformers",
    "huggingface_hub"
]
requires-python = ">=3.9"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
"src" = ["**/*.py", "**/*.json", "**/*.txt"]